<resources>
    <string name="app_name">Zenflow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="option_menu_timer">Timer</string>
    <string name="option_menu_stopwatch">Stopwatch</string>
    <string name="title_activity_timer">Timer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_stopwatch">Stopwatch</string>
    <string name="cancel_stopwatch">Cancel Stopwatch</string>
    <string name="cancel_timer">Cancel Timer</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="clickToLogin">Click to login</string>
    <string name="clickToRegister">Click to register</string>
    <string name="email_id">Email Id</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout">Logout</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="refresh_quote_of_the_day"># Quote Of The Day</string>
    <string name="textview">TextView</string>
    <string name="card_desc">The 4-7-8 breathing exercise is a straightforward technique, as well. It involves breathing in while counting to four, holding the breath to the count of seven, and exhaling to the count of eight.</string>
    <string name="title_workouts">Workouts</string>

    <string-array name="yoga_levels">
        <item>Beginners</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="time_hh_mm_ss">Time: HH:MM:SS</string>
    <string name="date_yyyy_mm_dd">Date: YYYY-MM-DD</string>
    <string name="yyyy_mm_dd_hh_mm_ss">YYYY-MM-DD HH:MM:SS</string>
</resources>