<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Workout Exercise Name -->
            <TextView
                android:id="@+id/workout_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/exercise_name"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Workout Date -->
            <TextView
                android:id="@+id/workout_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/date_yyyy_mm_dd"
                android:textColor="#757575"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/workout_title"
                app:layout_constraintTop_toBottomOf="@+id/workout_title" />

            <!-- Workout Time -->
            <TextView
                android:id="@+id/workout_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/time_hh_mm_ss"
                android:textColor="#757575"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/workout_date"
                app:layout_constraintTop_toBottomOf="@+id/workout_date" />

            <!-- Creation Date/Time (faded in the corner) -->
            <TextView
                android:id="@+id/creation_datetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yyyy_mm_dd_hh_mm_ss"
                android:textColor="#757575"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="SmallSp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
